# winux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  WINUX_OS_PROMPT.md
apps/winux-about/: Cargo.toml
apps/winux-about/src/: main.rs
apps/winux-accessibility/: Cargo.toml
apps/winux-accessibility/src/: main.rs  window.rs
apps/winux-accessibility/src/pages/: hearing.rs  mod.rs  pointing.rs  seeing.rs  typing.rs  zoom.rs
apps/winux-accessibility/src/settings/: at_spi.rs  dconf.rs  mod.rs
apps/winux-accessibility/src/ui/: mod.rs  toggle_row.rs
apps/winux-ai/: .env.example  Cargo.toml
apps/winux-ai/data/: org.winux.ai.desktop  org.winux.ai.gschema.xml
apps/winux-ai/src/: main.rs  window.rs
apps/winux-ai/src/ai/: azure_openai.rs  mod.rs  models.rs  prompts.rs
apps/winux-ai/src/chat/: conversation.rs  message.rs  mod.rs  streaming.rs
apps/winux-ai/src/database/: conversations.rs  mod.rs
apps/winux-ai/src/features/: code_assistant.rs  file_analyzer.rs  image_vision.rs  mod.rs  summarizer.rs  terminal_helper.rs  translator.rs
apps/winux-ai/src/integrations/: clipboard.rs  files.rs  mod.rs  system.rs  terminal.rs
apps/winux-ai/src/ui/: chat_view.rs  code_block.rs  input_area.rs  message_bubble.rs  mod.rs  sidebar.rs  style.css  style.rs
apps/winux-archive/: Cargo.toml
apps/winux-archive/src/: main.rs  window.rs
apps/winux-archive/src/archive/: formats.rs  iso.rs  mod.rs  p7zip.rs  rar.rs  tar.rs  zip.rs
apps/winux-archive/src/operations/: add.rs  create.rs  extract.rs  mod.rs  test.rs
apps/winux-archive/src/ui/: file_list.rs  mod.rs  path_bar.rs  progress.rs
apps/winux-backup/: Cargo.toml
apps/winux-backup/src/: main.rs  window.rs
apps/winux-backup/src/backends/: cloud.rs  local.rs  mod.rs  restic.rs  rsync.rs
apps/winux-backup/src/pages/: create.rs  mod.rs  overview.rs  restore.rs  schedule.rs  settings.rs
apps/winux-backup/src/ui/: backup_card.rs  mod.rs  progress.rs
apps/winux-bluetooth/: Cargo.toml
apps/winux-bluetooth/src/: main.rs  window.rs
apps/winux-bluetooth/src/bluez/: agent.rs  dbus.rs  device.rs  mod.rs
apps/winux-bluetooth/src/pages/: devices.rs  mod.rs  scan.rs  settings.rs  transfer.rs
apps/winux-bluetooth/src/ui/: device_row.rs  mod.rs  pairing_dialog.rs
apps/winux-builder/: Cargo.toml
apps/winux-builder/src/: main.rs  window.rs
apps/winux-builder/src/builders/: apple.rs  linux.rs  mod.rs  universal.rs  windows.rs
apps/winux-builder/src/projects/: dotnet.rs  electron.rs  flutter.rs  mod.rs  rust.rs
apps/winux-builder/src/ui/: build_page.rs  mod.rs  output_page.rs  project_page.rs
apps/winux-calculator/: Cargo.toml
apps/winux-calculator/src/: main.rs  window.rs
apps/winux-calculator/src/engine/: evaluator.rs  functions.rs  mod.rs  parser.rs
apps/winux-calculator/src/modes/: basic.rs  converter.rs  mod.rs  programmer.rs  scientific.rs
apps/winux-calculator/src/ui/: display.rs  history.rs  keypad.rs  mod.rs
apps/winux-calendar/: Cargo.toml
apps/winux-calendar/src/: main.rs  window.rs
apps/winux-calendar/src/data/: calendar.rs  event.rs  ical.rs  mod.rs
apps/winux-calendar/src/sync/: caldav.rs  local.rs  mod.rs
apps/winux-calendar/src/ui/: event_card.rs  event_editor.rs  mini_calendar.rs  mod.rs
apps/winux-calendar/src/views/: agenda.rs  day.rs  mod.rs  month.rs  week.rs
apps/winux-camera/: Cargo.toml  style.css
apps/winux-camera/src/: main.rs  window.rs
apps/winux-camera/src/camera/: device.rs  mod.rs  pipewire.rs  v4l2.rs
apps/winux-camera/src/capture/: mod.rs  photo.rs  video.rs
apps/winux-camera/src/processing/: effects.rs  filters.rs  mod.rs
apps/winux-camera/src/ui/: controls.rs  gallery.rs  mod.rs  viewfinder.rs
apps/winux-clipboard/: Cargo.toml
apps/winux-clipboard/src/: config.rs  daemon.rs  history.rs  main.rs  storage.rs
apps/winux-clipboard/src/ui/: item_row.rs  mod.rs  popup.rs  preview.rs
apps/winux-clock/: Cargo.toml  style.css
apps/winux-clock/src/: main.rs  window.rs
apps/winux-clock/src/data/: alarm.rs  mod.rs  timezone.rs
apps/winux-clock/src/notifications/: alarm_notify.rs  mod.rs
apps/winux-clock/src/tabs/: alarm.rs  mod.rs  stopwatch.rs  timer.rs  world_clock.rs
apps/winux-clock/src/ui/: analog_clock.rs  digital_clock.rs  mod.rs  time_picker.rs
apps/winux-cloud/: Cargo.toml
apps/winux-cloud/src/: main.rs  window.rs
apps/winux-cloud/src/database/: mod.rs  queries.rs  schema.rs
apps/winux-cloud/src/pages/: accounts.rs  activity.rs  files.rs  mod.rs  settings.rs  sync.rs
apps/winux-cloud/src/providers/: dropbox.rs  (+6 more)
apps/winux-connect/: Cargo.toml
apps/winux-connect/src/: main.rs  window.rs
apps/winux-contacts/: Cargo.toml
apps/winux-contacts/src/: main.rs  window.rs
apps/winux-dev-hub/: Cargo.toml
apps/winux-dev-hub/src/: main.rs  window.rs
apps/winux-disks/: Cargo.toml
apps/winux-disks/src/: main.rs  window.rs
apps/winux-documents/: Cargo.toml
apps/winux-documents/src/: main.rs  window.rs
apps/winux-edit/: Cargo.toml
apps/winux-edit/src/: config.rs  editor.rs  main.rs  syntax.rs  tabs.rs
apps/winux-env-manager/: Cargo.toml
apps/winux-env-manager/src/: main.rs
apps/winux-files/: Cargo.toml
apps/winux-files/resources/: style.css
apps/winux-files/src/: app.rs  archive.rs  archive_dialog.rs  config.rs  file_ops.rs  file_view.rs  lib.rs  main.rs  sidebar.rs
apps/winux-firewall/: Cargo.toml
apps/winux-firewall/src/: main.rs  window.rs
apps/winux-fonts/: Cargo.toml
apps/winux-fonts/src/: main.rs  window.rs
apps/winux-gaming/: Cargo.toml
apps/winux-gaming/src/: main.rs  window.rs
apps/winux-image/: Cargo.toml
apps/winux-image/src/: config.rs  lib.rs  main.rs  metadata.rs  thumbnail.rs  viewer.rs
apps/winux-logs/: Cargo.toml
apps/winux-logs/src/: main.rs  window.rs
apps/winux-mail/: Cargo.toml
apps/winux-mail/src/: main.rs  window.rs
apps/winux-mobile-studio/: Cargo.toml
apps/winux-mobile-studio/src/: main.rs  window.rs
apps/winux-monitor/: Cargo.toml
apps/winux-monitor/src/: main.rs  performance.rs  processes.rs  startup.rs  system_info.rs
(+764 files in other folders)
