# Winux OS - Cargo Workspace
# Todas as aplicações nativas em Rust

[workspace]
resolver = "2"
members = [
    # Desktop Environment
    "desktop/winux-compositor",
    "desktop/winux-panel",
    "desktop/winux-shell",
    "desktop/winux-launcher",
    "desktop/winux-notifications",
    "desktop/winux-control-center",
    "desktop/winux-shell-plugins",

    # Core Apps
    "apps/winux-files",
    "apps/winux-terminal",
    "apps/winux-settings",
    "apps/winux-store",
    "apps/winux-monitor",
    "apps/winux-edit",
    "apps/winux-image",
    "apps/winux-player",
    "apps/winux-notes",
    "apps/winux-calendar",
    "apps/winux-contacts",
    "apps/winux-documents",
    "apps/winux-mail",

    # System Apps
    "apps/winux-about",
    "apps/winux-personalize",
    "apps/winux-env-manager",
    "apps/winux-welcome",
    "apps/winux-clipboard",
    "apps/winux-bluetooth",
    "apps/winux-connect",
    "apps/winux-network",
    "apps/winux-clock",
    "apps/winux-users",
    "apps/winux-weather",
    "apps/winux-calculator",
    "apps/winux-backup",
    "apps/winux-fonts",
    "apps/winux-updater",
    "apps/winux-screenshot",
    "apps/winux-screencast",
    "apps/winux-power",
    "apps/winux-disks",
    "apps/winux-accessibility",
    "apps/winux-recorder",
    "apps/winux-firewall",
    "apps/winux-printers",
    "apps/winux-camera",
    "apps/winux-logs",

    # Developer Tools
    "apps/winux-builder",
    "apps/winux-dev-hub",
    "apps/winux-mobile-studio",

    # Gaming
    "apps/winux-gaming",

    # Utilities
    "apps/winux-archive",

    # AI
    "apps/winux-ai",

    # Cloud
    "apps/winux-cloud",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
authors = ["Winux Team <team@winux.org>"]
license = "MIT OR GPL-3.0"
repository = "https://github.com/winux-os/winux"
rust-version = "1.75"

[workspace.dependencies]
# GTK4 Stack
gtk4 = "0.8"
libadwaita = "0.6"
relm4 = "0.8"
relm4-macros = "0.8"
glib = "0.19"
gio = "0.19"
gdk4 = "0.8"
pango = "0.19"

# Wayland/Compositor
smithay = "0.3"
smithay-drm-extras = "0.1"
wayland-server = "0.31"
wayland-protocols = "0.31"

# Terminal
vte4 = "0.7"

# Editor
sourceview5 = "0.8"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-channel = "2.0"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ron = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
chrono = "0.4"
dirs = "5.0"
walkdir = "2.4"
notify = "6.0"
trash = "3.0"
mime_guess = "2.0"
fuzzy-matcher = "0.3"
rayon = "1.8"
image = "0.24"
open = "5.0"
url = "2.5"
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"

# System Info
sysinfo = "0.30"

# Network/HTTP
reqwest = { version = "0.11", features = ["json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# D-Bus
zbus = "4.0"

# Cairo for drawing
cairo-rs = { version = "0.19", features = ["png", "pdf", "svg"] }

# Document formats
poppler = "0.4"
epub = "2.1"
zip = "0.6"
unrar = "0.5"
quick-xml = "0.31"

# Cloud/Network
oauth2 = "4.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
urlencoding = "2.1"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
