[package]
name = "winux-about"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Winux OS - About System Application"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
sysinfo.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "winux-about"
path = "src/main.rs"
