[package]
name = "winux-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI Assistant for Winux OS - Integrated with Azure OpenAI"

[[bin]]
name = "winux-ai"
path = "src/main.rs"

[dependencies]
# GTK4/Libadwaita
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
pango.workspace = true

# Async
tokio.workspace = true
async-channel.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Utilities
chrono = { workspace = true, features = ["serde"] }
dirs.workspace = true
regex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
url.workspace = true

# HTTP Client for Azure OpenAI
reqwest = { workspace = true, features = ["json", "stream"] }

# Database
rusqlite.workspace = true

# System Info
sysinfo.workspace = true

# Syntax Highlighting
sourceview5.workspace = true

# Markdown parsing
pulldown-cmark = "0.9"

# UUID for message IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Base64 for image encoding
base64 = "0.21"

# Mime type detection
mime_guess.workspace = true

# Image handling
image.workspace = true

# Clipboard
arboard = "3.3"

[features]
default = []
