[package]
name = "winux-bluetooth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bluetooth manager for Winux OS"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
async-channel.workspace = true
once_cell.workspace = true

# D-Bus for BlueZ communication
zbus.workspace = true
