[package]
name = "winux-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cross-platform application builder for Winux OS"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
vte4.workspace = true
tokio.workspace = true
async-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
walkdir.workspace = true
