[package]
name = "winux-calculator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Winux OS - Calculator Application with multiple modes"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
once_cell.workspace = true

[[bin]]
name = "winux-calculator"
path = "src/main.rs"
