[package]
name = "winux-calendar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Calendar application for Winux OS"

[[bin]]
name = "winux-calendar"
path = "src/main.rs"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
tokio.workspace = true
async-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rusqlite.workspace = true
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
icalendar = "0.15"

[features]
default = []
caldav = []
