[package]
name = "winux-clipboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Clipboard manager with history for Winux OS"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
tokio.workspace = true
async-channel.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = { workspace = true, features = ["serde"] }
image.workspace = true
fuzzy-matcher.workspace = true

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# Process detection
procfs = "0.16"

# D-Bus for daemon communication
zbus = "4.0"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
