[package]
name = "winux-contacts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Contacts application for Winux OS with vCard and CardDAV support"

[[bin]]
name = "winux-contacts"
path = "src/main.rs"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
pango.workspace = true
tokio.workspace = true
async-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true, features = ["serde"] }
rusqlite.workspace = true
reqwest = { workspace = true, features = ["json"] }
regex.workspace = true
once_cell.workspace = true
url.workspace = true
open.workspace = true
image.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
csv = "1.3"
base64 = "0.21"

[features]
default = []
carddav = []
