[package]
name = "winux-dev-hub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Developer Hub - Central development tools manager for Winux OS"

[[bin]]
name = "winux-dev-hub"
path = "src/main.rs"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
dirs.workspace = true
walkdir.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
