[package]
name = "winux-documents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Document viewer for Winux OS - PDF, EPUB, DjVu, XPS, and comics"

[[bin]]
name = "winux-documents"
path = "src/main.rs"

[dependencies]
# GTK4 Stack
gtk4 = { workspace = true, features = ["v4_12"] }
libadwaita = { workspace = true, features = ["v1_4"] }
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
pango.workspace = true

# Cairo for rendering
cairo-rs.workspace = true

# PDF rendering
poppler.workspace = true

# Async
tokio.workspace = true
async-channel.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization for annotations/bookmarks
serde.workspace = true
serde_json.workspace = true

# Utilities
once_cell.workspace = true
parking_lot.workspace = true
regex.workspace = true
dirs.workspace = true
chrono.workspace = true

# Image handling for rendering
image.workspace = true

# EPUB support
epub.workspace = true

# Archive support for CBZ/CBR
zip.workspace = true
unrar.workspace = true

# XML parsing for XPS
quick-xml.workspace = true
