[package]
name = "winux-edit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Text editor with syntax highlighting for Winux OS"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
sourceview5.workspace = true
glib.workspace = true
gio.workspace = true
pango.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true
