[package]
name = "winux-edit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Simple text editor for Winux OS"

[[bin]]
name = "winux-edit"
path = "src/main.rs"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
pango.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = []
