[package]
name = "winux-env-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Winux OS Environment Variables Manager"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
