[package]
name = "winux-files"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Modern file manager for Winux OS"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
relm4.workspace = true
relm4-macros.workspace = true
glib.workspace = true
gio.workspace = true
tokio.workspace = true
async-channel.workspace = true
notify.workspace = true
mime_guess.workspace = true
trash.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
chrono.workspace = true
rayon.workspace = true
image.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
open = "5.0"

# Archive support
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.13"
sevenz-rust = "0.5"

# Optional RAR support (requires unrar library)
unrar = { version = "0.5", optional = true }

[features]
default = []
rar = ["unrar"]
