[package]
name = "winux-files"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Modern file manager for Winux OS"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
dirs.workspace = true
open = "5.0"
