[package]
name = "winux-firewall"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Firewall management application for Winux OS"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-channel.workspace = true
futures.workspace = true
once_cell.workspace = true
regex.workspace = true
chrono.workspace = true
