[package]
name = "winux-image"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Simple image viewer for Winux OS"

[[bin]]
name = "winux-image"
path = "src/main.rs"

[dependencies]
gtk4 = { workspace = true, features = ["v4_12"] }
libadwaita = { workspace = true, features = ["v1_4"] }
glib.workspace = true
gio.workspace = true
gdk4.workspace = true
