[package]
name = "winux-logs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "System log viewer for Winux OS - View journald, syslog, kernel and application logs"

[[bin]]
name = "winux-logs"
path = "src/main.rs"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync", "rt-multi-thread", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex.workspace = true
dirs.workspace = true
async-channel.workspace = true

[features]
default = []
