[package]
name = "winux-mobile-studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mobile Development Studio for Winux OS - Android, iOS, Flutter, React Native"

[[bin]]
name = "winux-mobile-studio"
path = "src/main.rs"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
vte4.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
async-channel.workspace = true
dirs.workspace = true
walkdir.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
