[package]
name = "winux-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "System monitor and task manager for Winux OS"

[[bin]]
name = "winux-monitor"
path = "src/main.rs"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
glib.workspace = true
gio.workspace = true
tokio.workspace = true
sysinfo.workspace = true
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"

[features]
default = []
